deploy/environments/development/api-core/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-core
spec:
  template:
    spec:
      containers:
      - name: api-core
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
